seller module implementation